BUILD-8293: fix integration test

--- a/.github/workflows/it-test.yml
+++ b/.github/workflows/it-test.yml
@@ -126,9 +126,9 @@ jobs:
           comparison: startsWith
 
       - uses: nick-fields/assert-action@aa0067e01f0f6545c31755d6ca128c5a3a14f6bf # v2
-        name: Then the issue status should be To Do
+        name: Then the issue status should be Open
         with:
-          expected: "To Do"
+          expected: "Open"
           actual: ${{ fromJSON(steps.jira-content.outputs.json_payload).fields.status.name }}
           comparison: exact
 
